--- a/exoplanets/exoplanets.html
+++ b/exoplanets/exoplanets.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,17 +13,19 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Jersey+15&display=swap"
         rel="stylesheet">
+    <link rel="shortcut icon" href="../temp/favicon.png">
     <title>Экзопланеты</title>
 </head>
+
 <body>
     <!-- Хедер, в нем находится чекбокс переключения темы, ссылки на дочерние страницы
      и контакты, также чекбокс для мобильной версии сайта -->
     <header class="header">
         <input type="checkbox" id="toggle" class="toggle">
-<label for="toggle" class="button">
-    <img src="../temp/sun.png" id="sun" alt="Light theme">
-    <img src="../temp/half-moon.png" id="moon" alt="Dark theme">
-</label>
+        <label for="toggle" class="button">
+            <img src="../temp/sun.png" id="sun" alt="Light theme">
+            <img src="../temp/half-moon.png" id="moon" alt="Dark theme">
+        </label>
         <input type="checkbox" id="menuwka">
         <label for="menuwka" class="icons">
             <i id="menu" class='bx bxl-squarespace'></i>
@@ -44,47 +47,58 @@
         <div class="left">
             <p>&#706;</p>
         </div>
-        
-    <div class="right">
-        <p>&#707;</p>
-    </div>
-        
+
+        <div class="right">
+            <p>&#707;</p>
+        </div>
+
 
         <div class="slide slide1 active">
             <div class="description">
-            <h1>Kep<span class="bigscreen">ler</span> <span class="smallscreen">ler</span>  <span class="rotated">452b</span></h1>
-            <p id="tt1"><span class="fw">Kepler-452b</span> — первая из открытых <span class="closed">потенциально скалистых </span> 
-                суперземель, которая вращается вокруг похожей на Солнце звезды<span class="closed"> спектрального класса G2 
-                в обитаемой зоне</span>. Согласно индексу подобия Земли, Kepler-452b — шестая в списке планет, похожих на Землю.</p>
-                <p id="bt1" class="closed"> <span class="fw">Период</span> обращения планеты Kepler-452 b равен 384,843 земных суток. Kepler-452b больше на 63 % и старше на 1,5 млрд лет, 
+                <h1>Kep<span class="bigscreen">ler</span> <span class="smallscreen">ler</span> <span
+                        class="rotated">452b</span></h1>
+                <p id="tt1"><span class="fw">Kepler-452b</span> — первая из открытых <span class="closed">потенциально
+                        скалистых </span>
+                    суперземель, которая вращается вокруг похожей на Солнце звезды<span class="closed"> спектрального
+                        класса G2
+                        в обитаемой зоне</span>. Согласно индексу подобия Земли, Kepler-452b — шестая в списке планет,
+                    похожих на Землю.</p>
+                <p id="bt1" class="closed"> <span class="fw">Период</span> обращения планеты Kepler-452 b равен 384,843
+                    земных суток. Kepler-452b больше на 63 % и старше на 1,5 млрд лет,
                     чем Земля, но находится на орбите в зоне обитаемости своей звезды.</p>
-        </div>
+            </div>
         </div>
 
         <div class="slide slide2">
             <div class="description">
-            <h1>Cent<span class="bigscreen">auria</span> <span class="smallscreen">-auria</span> B</h1>
-            <p id="tt2"><span class="fw">Проксима Центавра b</span> — это экзопланета, вращающаяся вокруг звезды Проксима Центавра<span class="closed">, ближайшей к Солнцу звезды,
-                находящейся на расстоянии около 4,24 световых лет</span>.</p>
-            <p id="bt2"><span class="fw">Планета</span> была обнаружена в 2016 году и находится в обитаемой зоне, где условия могут позволять существование жидкой воды.</p>
-        </div>
+                <h1>Cent<span class="bigscreen">auria</span> <span class="smallscreen">-auria</span> B</h1>
+                <p id="tt2"><span class="fw">Проксима Центавра b</span> — это экзопланета, вращающаяся вокруг звезды
+                    Проксима Центавра<span class="closed">, ближайшей к Солнцу звезды,
+                        находящейся на расстоянии около 4,24 световых лет</span>.</p>
+                <p id="bt2"><span class="fw">Планета</span> была обнаружена в 2016 году и находится в обитаемой зоне,
+                    где условия могут позволять существование жидкой воды.</p>
+            </div>
         </div>
 
         <div class="slide slide3">
             <div class="description">
                 <h1>Gliese <span class="rotated">667Cc</span></h1>
-                <p id="tt3"><span class="fw">Gliese 667Cc</span> —  это экзопланета, находящаяся на
+                <p id="tt3"><span class="fw">Gliese 667Cc</span> — это экзопланета, находящаяся на
                     расстоянии 23,62 тысяч световых лет от Земли. Она была открыта в
-                     2011г. и считается крайне похожей на Землю планетой.</p>
-            <p id="bt3"><span class="fw">Поверхность</span> планеты вероятно покрыта водными массами, что делает ее потенциально пригодной для жизни.
+                    2011г. и считается крайне похожей на Землю планетой.</p>
+                <p id="bt3"><span class="fw">Поверхность</span> планеты вероятно покрыта водными массами, что делает ее
+                    потенциально пригодной для жизни.
 
-            <span class="closed">Изучение Gliese 667Cc позволяет ученым лучше понять возможность существования жизни на других планетах в нашей галактике.</span></p>
-        </div>
+                    <span class="closed">Изучение Gliese 667Cc позволяет ученым лучше понять возможность существования
+                        жизни на других планетах в нашей галактике.</span>
+                </p>
+            </div>
         </div>
     </div>
 
     <script src="../theme.js"></script>
-<script src="exoplanets.js"></script>
+    <script src="exoplanets.js"></script>
 
 </body>
+
 </html>
