--- a/fogs/fogs.html
+++ b/fogs/fogs.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,17 +13,19 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Jersey+15&display=swap"
         rel="stylesheet">
+    <link rel="shortcut icon" href="../temp/favicon.png">
     <title>Туманности</title>
 </head>
+
 <body>
     <!-- Хедер, в нем находится чекбокс переключения темы, ссылки на дочерние страницы
      и контакты, также чекбокс для мобильной версии сайта -->
     <header class="header">
         <input type="checkbox" id="toggle" class="toggle">
-<label for="toggle" class="button">
-    <img src="../temp/sun.png" id="sun" alt="Light theme">
-    <img src="../temp/half-moon.png" id="moon" alt="Dark theme">
-</label>
+        <label for="toggle" class="button">
+            <img src="../temp/sun.png" id="sun" alt="Light theme">
+            <img src="../temp/half-moon.png" id="moon" alt="Dark theme">
+        </label>
         <input type="checkbox" id="menuwka">
         <label for="menuwka" class="icons">
             <i id="menu" class='bx bxl-squarespace'></i>
@@ -44,48 +47,54 @@
         <div class="left">
             <p>&#706;</p>
         </div>
-        
-    <div class="right">
-        <p>&#707;</p>
-    </div>
-    <div class="slide slide3 active">
-        <div class="description">
-            <h1>Butterfly</h1>
-            <p id="tt3"><span class="fw">Туманность Бабочка</span> это планетарная туманность в 
-                созвездии Скорпиона<span class="closed">, на расстоянии около 3.8 тысяч световых лет от Земли</span>. Она имеет биполярную структуру, напоминающую крылья бабочки. </p>
-       <p id="bt3"> <span class="fw">Центральная</span> звезда туманности очень горячая, с температурой свыше 200 тысяч градусов по Цельсию. <span class="closed"> Туманность излучает свет в различных спектрах, и её изображения, сделанные телескопом Хаббл, впечатляют своей красотой.</span></p>
-    </div>
-    </div>
-        
+
+        <div class="right">
+            <p>&#707;</p>
+        </div>
+        <div class="slide slide3 active">
+            <div class="description">
+                <h1>Butterfly</h1>
+                <p id="tt3"><span class="fw">Туманность Бабочка</span> это планетарная туманность в
+                    созвездии Скорпиона<span class="closed">, на расстоянии около 3.8 тысяч световых лет от
+                        Земли</span>. Она имеет биполярную структуру, напоминающую крылья бабочки. </p>
+                <p id="bt3"> <span class="fw">Центральная</span> звезда туманности очень горячая, с температурой свыше
+                    200 тысяч градусов по Цельсию. <span class="closed"> Туманность излучает свет в различных спектрах,
+                        и её изображения, сделанные телескопом Хаббл, впечатляют своей красотой.</span></p>
+            </div>
+        </div>
+
 
         <div class="slide slide2">
             <div class="description">
-            <h1>Carina</h1>
-            <p id="tt2"><span class="fw">Туманность Киля</span> это большая область звездообразования в 
-                созвездии Киля, расположенная на расстоянии около 
-                7,5 тысяч световых лет от Земли.</p>
-            <p id="bt2"><span class="fw">Туманность</span> Киля излучает свет в различных спектрах и является объектом интенсивных исследований астрономов<span class="closed"> благодаря своей динамичной и сложной структуре</span>.</p>
-        </div>
+                <h1>Carina</h1>
+                <p id="tt2"><span class="fw">Туманность Киля</span> это большая область звездообразования в
+                    созвездии Киля, расположенная на расстоянии около
+                    7,5 тысяч световых лет от Земли.</p>
+                <p id="bt2"><span class="fw">Туманность</span> Киля излучает свет в различных спектрах и является
+                    объектом интенсивных исследований астрономов<span class="closed"> благодаря своей динамичной и
+                        сложной структуре</span>.</p>
+            </div>
         </div>
 
         <div class="slide slide1">
             <h1>Pillars of Creation</h1>
             <div class="description">
-            <p id="tt1"><span class="fw">Столпы</span> творения -  это огромные газовые сгустки,
-                 появившиеся из столбов водорода и 
-                пыли под воздействием звёздного ветра. <span class="closed"> Эти колонны газа - один из 
-                самых узнаваемых образов космоса.</span>
-            </p>
-            <p id="bt1"> <span class="fw">Туманность</span> находится на расстоянии 7 тысяч световых лет от Земли
-                и является местом 
-                интенсивного звездообразования<span class="closed">, где газ и пыль сжимаются под воздействием
-                 гравитации, образуя гигантские столбы, внутри которых зарождаются новые звезды.</span> </p>
-        </div>
+                <p id="tt1"><span class="fw">Столпы</span> творения - это огромные газовые сгустки,
+                    появившиеся из столбов водорода и
+                    пыли под воздействием звёздного ветра. <span class="closed"> Эти колонны газа - один из
+                        самых узнаваемых образов космоса.</span>
+                </p>
+                <p id="bt1"> <span class="fw">Туманность</span> находится на расстоянии 7 тысяч световых лет от Земли
+                    и является местом
+                    интенсивного звездообразования<span class="closed">, где газ и пыль сжимаются под воздействием
+                        гравитации, образуя гигантские столбы, внутри которых зарождаются новые звезды.</span> </p>
+            </div>
         </div>
     </div>
 
     <script src="../theme.js"></script>
-<script src="fog.js"></script>
+    <script src="fog.js"></script>
 
 </body>
+
 </html>
