--- a/holes/holes.html
+++ b/holes/holes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru" data-theme="dark">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,17 +13,19 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Jersey+15&display=swap"
         rel="stylesheet">
+    <link rel="shortcut icon" href="../temp/favicon.png">
     <title>Черные дыры</title>
 </head>
+
 <body>
     <!-- Хедер, в нем находится чекбокс переключения темы, ссылки на дочерние страницы
      и контакты, также чекбокс для мобильной версии сайта -->
     <header class="header">
         <input type="checkbox" id="toggle" class="toggle">
-<label for="toggle" class="button">
-    <img src="../temp/sun.png" id="sun" alt="Light theme">
-    <img src="../temp/half-moon.png" id="moon" alt="Dark theme">
-</label>
+        <label for="toggle" class="button">
+            <img src="../temp/sun.png" id="sun" alt="Light theme">
+            <img src="../temp/half-moon.png" id="moon" alt="Dark theme">
+        </label>
         <input type="checkbox" id="menuwka">
         <label for="menuwka" class="icons">
             <i id="menu" class='bx bxl-squarespace'></i>
@@ -44,42 +47,50 @@
         <div class="left">
             <p>&#706;</p>
         </div>
-        
-    <div class="right">
-        <p>&#707;</p>
-    </div>
-        
+
+        <div class="right">
+            <p>&#707;</p>
+        </div>
+
         <div class="slide slide2 active">
             <div class="description">
-            <h1>M87*</h1>
-            <p id="tt2"><span class="fw">M87*</span> — это сверхмассивная черная дыра в центре галактики Мессье 87.
-                Она находится на расстоянии 53 миллиона световых лет от Земли<span class="closed"> и обладает массой 6,5 миллиардов солнечных масс</span>.</p>
+                <h1>M87*</h1>
+                <p id="tt2"><span class="fw">M87*</span> — это сверхмассивная черная дыра в центре галактики Мессье 87.
+                    Она находится на расстоянии 53 миллиона световых лет от Земли<span class="closed"> и обладает массой
+                        6,5 миллиардов солнечных масс</span>.</p>
                 <p id="bt2"><span class="fw">В 2019</span> году M87* стала первой черной дырой,
-            изображенной с помощью проекта Event Horizon Telescope, что предоставило первое прямое доказательство существования черных дыр.</p>
-        </div>
+                    изображенной с помощью проекта Event Horizon Telescope, что предоставило первое прямое
+                    доказательство существования черных дыр.</p>
+            </div>
         </div>
 
         <div class="slide slide1">
             <div class="description">
-            <h1>Cygnus X-1</h1>
-            <p id="tt"><span class="fw">Cygnus X-1</span>  — это черная дыра, расположенная в созвездии Лебедя на расстоянии около 6 тысяч световых лет от Земли.</p>
-                <p id="bt"><span class="fw">Масса Cygnus X-1</span> составляет примерно 21 солнечную массу. Это одна из первых обнаруженных черных дыр и один из наиболее изученных объектов такого типа.</p>
-        </div>
+                <h1>Cygnus X-1</h1>
+                <p id="tt"><span class="fw">Cygnus X-1</span> — это черная дыра, расположенная в созвездии Лебедя на
+                    расстоянии около 6 тысяч световых лет от Земли.</p>
+                <p id="bt"><span class="fw">Масса Cygnus X-1</span> составляет примерно 21 солнечную массу. Это одна из
+                    первых обнаруженных черных дыр и один из наиболее изученных объектов такого типа.</p>
+            </div>
         </div>
 
 
         <div class="slide slide3">
             <div class="description">
                 <h1>Sagittarius A*</h1>
-                <p id="tt3"><span class="fw">Стрелец A*</span> это сверхмассивная черная дыра, 
-                    расположенная в центре нашей галактики. Она находится на расстоянии около 26 тысяч световых лет от Земли<span class="closed"> в созвездии Стрельца</span>.</p>
-                    <p id="bt3"><span class="fw">Ее масса</span> составляет около 4 миллионов масс Солнца. Стрелец A* играет ключевую роль в динамике галактики <span class="closed">, влияя на движение звезд и газа в её центральной области</span>.</p>
-        </div>
+                <p id="tt3"><span class="fw">Стрелец A*</span> это сверхмассивная черная дыра,
+                    расположенная в центре нашей галактики. Она находится на расстоянии около 26 тысяч световых лет от
+                    Земли<span class="closed"> в созвездии Стрельца</span>.</p>
+                <p id="bt3"><span class="fw">Ее масса</span> составляет около 4 миллионов масс Солнца. Стрелец A* играет
+                    ключевую роль в динамике галактики <span class="closed">, влияя на движение звезд и газа в её
+                        центральной области</span>.</p>
+            </div>
         </div>
     </div>
 
     <script src="../theme.js"></script>
-<script src="holes.js"></script>
+    <script src="holes.js"></script>
 
 </body>
+
 </html>
