--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,22 +16,23 @@
     <link rel="shortcut icon" href="temp/favicon.png">
     <title>COSMOS</title>
 </head>
+
 <body>
     <!-- Хедер, в нем находится чекбокс переключения темы, ссылки на дочерние страницы
      и контакты, также чекбокс для мобильной версии сайта -->
     <header class="header">
         <input type="checkbox" id="toggle" class="toggle">
-<label for="toggle" class="button">
-    <img src="temp/sun.png" id="sun" alt="Light theme">
-    <img src="temp/half-moon.png" id="moon" alt="Dark theme">
-</label>
+        <label for="toggle" class="button">
+            <img src="temp/sun.png" id="sun" alt="Light theme">
+            <img src="temp/half-moon.png" id="moon" alt="Dark theme">
+        </label>
         <input type="checkbox" id="menuwka">
         <label for="menuwka" class="icons">
             <i id="menu" class='bx bxl-squarespace'></i>
             <i id="cross" class='bx bx-x-circle'></i>
         </label>
         <nav class="navbar">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="test/test.html">Test</a>
             <a href="gallery/gallery.html">Gallery</a>
             <p id="contacts">
@@ -43,19 +45,43 @@
     <!-- Блок карточек-ссылок -->
     <main>
         <div class="container">
-            <div class="textBlock"><h1>Космос</h1><br><p class="description"><span class="fw">Космос</span> 
-                - это бескрайние просторы загадочной вселенной<span id="closed">, где сосуществуют бесчисленные звезды,
-                 планеты и галактики. Здесь скрыты тайны, удивительные явления и возможности для бесконечного открытия.</span> 
+            <div class="textBlock">
+                <h1>Космос</h1><br>
+                <p class="description"><span class="fw">Космос</span>
+                    - это бескрайние просторы загадочной вселенной<span id="closed">, где сосуществуют бесчисленные
+                        звезды,
+                        планеты и галактики. Здесь скрыты тайны, удивительные явления и возможности для бесконечного
+                        открытия.</span>
 
-                 <br><br><span class="fw">На</span> этом сайте вы можете подробнее рассмотреть некоторые космические объекты. 
-                 Просто кликните по соответствующей карточке и отправьтесь в увлекательное путешествие по космосу.</p></div>
-            <a href="fogs/fogs.html"><div class="card1"><p class="tc">Туманности</p></div></a>
-            <a href="galaxies/galaxy.html"><div class="card2"><p class="tc">Галактики</p></div></a>
-            <a href="holes/holes.html"><div class="card3"><p class="tc">Черные дыры</p></div></a>
-            <a href="exoplanets/exoplanets.html"><div class="card4"><p class="tc">Экзопланеты</p></div></a>
+                    <br><br><span class="fw">На</span> этом сайте вы можете подробнее рассмотреть некоторые космические
+                    объекты.
+                    Просто кликните по соответствующей карточке и отправьтесь в увлекательное путешествие по космосу.
+                </p>
+            </div>
+            <a href="fogs/fogs.html">
+                <div class="card1">
+                    <p class="tc">Туманности</p>
+                </div>
+            </a>
+            <a href="galaxies/galaxy.html">
+                <div class="card2">
+                    <p class="tc">Галактики</p>
+                </div>
+            </a>
+            <a href="holes/holes.html">
+                <div class="card3">
+                    <p class="tc">Черные дыры</p>
+                </div>
+            </a>
+            <a href="exoplanets/exoplanets.html">
+                <div class="card4">
+                    <p class="tc">Экзопланеты</p>
+                </div>
+            </a>
         </div>
     </main>
-      <script src="home.js"></script>
-      <script src="theme.js"></script>
+    <script src="home.js"></script>
+    <script src="theme.js"></script>
 </body>
+
 </html>
